# itmo-py

./: .gitignore  requirements.txt
hw-1/artifacts/: commands.md
hw-1/src/: nl.py  tail.py  wc.py
hw-2/: Dockerfile  create_figure.py  create_table.py
hw-2/artifacts/: README.md  example_figure.tex  example_table.tex
hw-2/src/: README.md  pyproject.toml
hw-2/src/pytexhwpy/: latex_utils.py
hw-3/: gen_artifact3.1.py  gen_artifact3.2.py  gen_artifact3.3.py  hash_matrix.py  mixin.py  pymatrix.py
hw-3/artifacts/3.1/: matrix*.txt  matrix+.txt  matrix@.txt
hw-3/artifacts/3.2/: matrix*.txt  matrix+.txt  matrix@.txt
hw-3/artifacts/3.3/: CD.txt  hash.txt
